# padel-amistoso

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  exploration.md  pyproject.toml  render.yaml
.devcontainer/: devcontainer.json
.github/prompts/: plan-codebaseImprovements.prompt.md
.github/workflows/: ci.yml
api-playground/: index.html
backend/: config.py  email.py  models.py
backend/api/: __init__.py  backup.py  db.py  elo_integration.py  elo_store.py  helpers.py  player_secret_store.py  push.py  push_events.py  rate_limit.py  routes_admin_players.py  routes_clubs.py  routes_communities.py  routes_crud.py  routes_gp.py  routes_mex.py  routes_player_auth.py  routes_player_space.py  routes_playoff.py  routes_push.py  routes_registration.py  routes_schema.py  routes_score_actions.py  routes_seasons.py  routes_share.py  schemas.py  sse.py  state.py
backend/auth/: __init__.py  (+6 more)
docker/: Dockerfile
frontend/: 404.html  admin-clubs-settings-panel.js  admin-clubs.js  admin-collaborators.js  admin-communities.js  admin-convert.js  admin-create.js  admin-gp.js  admin-lobby-settings-panel.js  admin-mex.js  admin-player-codes.js  admin-players.js  admin-registration.js  admin-settings-panel.js  admin-tournaments.js  admin-tv-email.js  admin-utils.js  admin.css  admin.js  auth.js  i18n.js  i18n_key_map.json  index.html  manifest.json  player.css  player.html  player.js  public.html  register.css  register.html  register.js  service-worker.js  shared.js  tv.css  tv.html  tv.js
tests/: conftest.py  test_admin_players.py  test_api.py  test_auth.py  test_backup.py  test_banner_comments.py  test_clubs.py  test_communities.py  test_convert_registration.py  test_elo.py  test_elo_integration.py  test_elo_store.py  test_email.py  test_group_playoff.py  test_group_stage.py  test_helpers.py  test_mexicano.py  test_player_auth.py  test_player_space.py  test_playoff.py  test_push.py  test_registration_sharing.py  test_score_actions.py  test_seasons.py  test_sharing.py
(+15 files in other folders)
