[project]
name = "padel-amistoso"
version = "0.1.0"
description = "Padel tournament manager — group+playoff and Mexicano formats"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "networkx>=3.6.1",
    "matplotlib>=3.10.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 120
