[project]
name = "padel-amistoso"
version = "0.1.0"
description = "Padel tournament manager — group+playoff and Mexicano formats"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "networkx>=3.6.1",
    "matplotlib>=3.10.8",
    "pyjwt>=2.11.0",
    "bcrypt>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.15.4",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 120
