[project]
name = "padel-amistoso"
version = "1.7.1"
description = "Padel tournament manager — group+playoff and Mexicano formats"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "email-validator>=2.0",
    "networkx>=3.6.1",
    "matplotlib>=3.10.8",
    "pyjwt>=2.11.0",
    "bcrypt>=5.0.0",
    "coolname>=4.1.0",
    "segno>=1.6.6",
    "python-dotenv>=1.0",
    "aiosmtplib>=3.0",
    "pywebpush>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.15.4",
    "pre-commit>=4.0",
    "commitizen>=4.0",
    "zxing-cpp>=2.3",
    "pillow>=11.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = false

[tool.ruff]
line-length = 120
